Added SCM Master Recipe Page

--- a/CFMMCD/Views/DessertPriceTier/Index.cshtml
+++ b/CFMMCD/Views/DessertPriceTier/Index.cshtml
@@ -47,7 +47,7 @@
                     </thead>
                     <tbody>
                         @{
-                            if (DPTList != null)
+                            if (Model.DesPTList != null)
                             {
                                 // for each DesPTList declared in ViewModel
                                 foreach (DessertPriceTierViewModel dpt in Model.DesPTList)
