--- a/CFMMCD/Views/Home/Index.cshtml
+++ b/CFMMCD/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
                                 }
                                 if (UASession.SCM)
                                 {
-                                    <li class="list-group-item">@Html.ActionLink("SCM Master Recipe (UD)", "Index", "SCMRecipe")</li>
+                                    <li class="list-group-item">@Html.ActionLink("SCM Master Recipe", "Index", "SCMRecipe")</li>
                                 }
                                 if (UASession.TEG)
                                 {
