--- a/CFMMCD/Views/McCafeBistroPriceTier/Index.cshtml
+++ b/CFMMCD/Views/McCafeBistroPriceTier/Index.cshtml
@@ -47,10 +47,10 @@
                     </thead>
                     <tbody>
                         @{
-                            if (MBTList != null)
+                            if (Model.MBPTList != null)
                             {
                                 // for each MMBTList declared in ViewModel
-                                foreach (McCafeBistroPriceTierViewModel mbt in Model.MMBTList)
+                                foreach (McCafeBistroPriceTierViewModel mbt in Model.MBPTList)
                                 {
                                     <tr class="tr-element">
                                         <td></td>
