--- a/CFMMCD/Views/McCafeLevel2PriceTier/Index.cshtml
+++ b/CFMMCD/Views/McCafeLevel2PriceTier/Index.cshtml
@@ -47,7 +47,7 @@
                     </thead>
                     <tbody>
                         @{
-                            if (ML2List != null)
+                            if (Model.M2PTList != null)
                             {
                                 // for each M2PTList declared in ViewModel
                                 foreach (McCafeLevel2PriceTierViewModel ml2 in Model.M2PTList)
