--- a/CFMMCD/Views/McCafeLevel3PriceTier/Index.cshtml
+++ b/CFMMCD/Views/McCafeLevel3PriceTier/Index.cshtml
@@ -47,7 +47,7 @@
                     </thead>
                     <tbody>
                         @{
-                            if (ML3List != null)
+                            if (Model.M3PTList != null)
                             {
                                 // for each M3PTList declared in ViewModel
                                 foreach (McCafeLevel3PriceTierViewModel ml3 in Model.M3PTList)
