--- a/CFMMCD/Views/Ownership/Index.cshtml
+++ b/CFMMCD/Views/Ownership/Index.cshtml
@@ -47,7 +47,7 @@
                     </thead>
                     <tbody>
                         @{
-                            if (OSPList != null)
+                            if (Model.OHPList != null)
                             {
                                 // for each OHPList declared in ViewModel
                                 foreach (OwnershipViewModel osp in Model.OHPList)
