--- a/CFMMCD/Views/ProfitCenter/Index.cshtml
+++ b/CFMMCD/Views/ProfitCenter/Index.cshtml
@@ -47,7 +47,7 @@
                     </thead>
                     <tbody>
                         @{
-                            if (PRCList != null)
+                            if (Model.PCList != null)
                             {
                                 // for each BreakPTList declared in ViewModel
                                 foreach (ProfitCenterViewModel prc in Model.PCList)
