--- a/CFMMCD/Views/ProjectGoldPriceTier/Index.cshtml
+++ b/CFMMCD/Views/ProjectGoldPriceTier/Index.cshtml
@@ -47,7 +47,7 @@
                     </thead>
                     <tbody>
                         @{
-                            if (PGTList != null)
+                            if (Model.PrjPTList != null)
                             {
                                 // for each PrjPTList declared in ViewModel
                                 foreach (ProjectGoldPriceTierViewModel pgt in Model.PrjPTList)
