--- a/CFMMCD/Views/RegularPriceTier/Index.cshtml
+++ b/CFMMCD/Views/RegularPriceTier/Index.cshtml
@@ -47,7 +47,7 @@
                     </thead>
                     <tbody>
                         @{
-                            if (RPTList != null)
+                            if (Model.RegPTList != null)
                             {
                                 // for each RegPTList declared in ViewModel
                                 foreach (RegularPriceTierViewModel rpt in Model.RegPTList)
