--- a/CFMMCD/Views/BreakfastPriceTier/Index.cshtml
+++ b/CFMMCD/Views/BreakfastPriceTier/Index.cshtml
@@ -47,7 +47,7 @@
                     </thead>
                     <tbody>
                         @{
-                            if (BPTList != null)
+                            if (Model.BreakPTList != null)
                             {
                                 // for each BreakPTList declared in ViewModel
                                 foreach (BreakfastPriceTierViewModel bpt in Model.BreakPTList)
