--- a/CFMMCD/Views/Location/Index.cshtml
+++ b/CFMMCD/Views/Location/Index.cshtml
@@ -3,7 +3,6 @@
 
 @{
     ViewBag.Title = "Location";
-    List<LocationViewModel> LCNList = (List<LocationViewModel>)ViewData["ModelList"];
 }
 
 <h2 align="center">@ViewBag.Title</h2>
@@ -47,7 +46,7 @@
                     </thead>
                     <tbody>
                         @{
-                            if (LCNList != null)
+                            if (Model.LCList != null)
                             {
                                 // for each LCList declared in ViewModel
                                 foreach (LocationViewModel lcn in Model.LCList)
