--- a/CFMMCD/Views/MDSPriceTier/Index.cshtml
+++ b/CFMMCD/Views/MDSPriceTier/Index.cshtml
@@ -47,7 +47,7 @@
                     </thead>
                     <tbody>
                         @{
-                            if (MDSList != null)
+                            if (Model.MDPTList != null)
                             {
                                 // for each MDPTList declared in ViewModel
                                 foreach (MDSPriceTierViewModel mds in Model.MDPTList)
