--- a/CFMMCD/Views/ReportGeneration/Index.cshtml
+++ b/CFMMCD/Views/ReportGeneration/Index.cshtml
@@ -430,7 +430,7 @@
                     </label>
                 </div>
                 <div class="col-lg-1">
-                    <button type="button" class="btn btn-danger">Export</button>
+                    <a href="@Url.Action("ExportPDF", "ReportGeneration")" type="button" class="btn btn-danger">Export</a>
                 </div>
             </div>
         </div>
