Added Export to Excel in Audit Log

--- a/CFMMCD/Views/AuditLog/Index.cshtml
+++ b/CFMMCD/Views/AuditLog/Index.cshtml
@@ -41,8 +41,8 @@
             </tbody>
         </table> 
         <div class="right-fixed">
-            <button type="button" class="btn btn-default" value="toPDF" disabled>Export to PDF</button>
-            <button type="button" class="btn btn-default" value="toExcel" disabled>Export as Spreadsheet</button>
+            <button type="button" class="btn btn-default" name="command" value="toPDF" disabled>Export to PDF</button>
+            <button type="button" class="btn btn-default" name="command" value="toExcel" disabled>Export as Spreadsheet</button>
         </div>
     </div>
 </div>
