--- a/CFMMCD/Views/Location/Index.cshtml
+++ b/CFMMCD/Views/Location/Index.cshtml
@@ -26,11 +26,11 @@
                     <div class="col-lg-10 col-lg-offset-1">
                         <div class="col-lg-4">
                             @Html.LabelFor(m => m.Id, "Id", new { @class = "control-label", @type = "number" })
-                            @Html.TextBoxFor(m => m.Id, new { @class = "form-control input-sm", @Value = Model.Id, @maxlength = "6" })
+                            @Html.TextBoxFor(m => m.Id, new { @class = "form-control input-sm", @Value = Model.Id, @type= "number" })
                         </div>
                         <div class="col-lg-8">
                             @Html.LabelFor(m => m.LOCATN, "Location", new { @class = "control-label" })
-                            @Html.TextBoxFor(m => m.LOCATN, new { @class = "form-control input-sm", @Value = Model.LOCATN, @maxlength = "1" })
+                            @Html.TextBoxFor(m => m.LOCATN, new { @class = "form-control input-sm", @Value = Model.LOCATN, @maxlength = "20" })
                         </div>
                     </div>
                 </div>
