--- a/CFMMCD/Views/RawItemMaster/Index.cshtml
+++ b/CFMMCD/Views/RawItemMaster/Index.cshtml
@@ -242,10 +242,7 @@
 					<div class="col-lg-12">
 						<div class="form-group">
 							<label class="form-label">Location</label>
-							@Html.DropDownListFor(m => m.Location, new SelectList( new List<Object>{
-								new { value = "0" , text = "To be added after"  },
-								new { value = "1" , text = "Location" },
-								new { value = "2" , text = "tier" }}, "value", "text", "0"), new { @class = "form-control input-sm" })
+							@Html.DropDownListFor(m => Model.Location, new SelectList(Model.LocationList, "value", "text", "0"), new { @class = "form-control input-sm" })
 						</div>
                         <div class="form-group">
                             @Html.LabelFor(model => Model.Region, "Region", new { @class = "form-label" })
