--- a/CFMMCD/Views/VendorMaster/Index.cshtml
+++ b/CFMMCD/Views/VendorMaster/Index.cshtml
@@ -10,7 +10,8 @@
     }
 }
 
-<h2>Vendor Master</h2>
+<h2 align="center">@ViewBag.Title</h2>
+<hr />
 <!--Alerts-->
 <div class="container">
     @if (TempData["ErrorMessage"] != null)
@@ -28,10 +29,10 @@
     {
         @Html.AntiForgeryToken()
         <div class="container-fluid">
-            <div class="col-lg-2 label-container-left">
+            <div class="col-lg-3 text-right">
                 <label class="form-label" for="menu-item">Search Vendor number/description</label>
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-6">
                 @Html.TextBoxFor(m => m.SearchItem, new { @class = "form-control" })
                 <div class="input-group float-right" style="padding-top:8px">
                     <label class="checkbox-inline form-label">
@@ -49,37 +50,94 @@
     @using (Html.BeginForm("UpdateDelete", "VendorMaster", FormMethod.Post, new { }))
     {
         <div class="container-fluid">
+            <div class="col-lg-6 col-lg-offset-3">
+                <div class="col-lg-5">
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.VEMVEN, "Vendor number", new {  @class = "form-label" } )
+                        @Html.TextBoxFor(m => Model.VEMVEN, new { @class = "form-control input-sm", @type = "number", @maxlength = "3" })
+                    </div>
+                </div>
+                <div class="col-lg-6 col-lg-offset-1">
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.VEMDS1, "Vendor description", new { @class = "form-label" })
+                        @Html.TextBoxFor(m => Model.VEMDS1, new { @class = "form-control input-sm", @maxlength = "20" })
+                    </div>
+                 </div>
+            </div>
+        </div>
+        <hr/>
+        <div class="container-fluid">
+            <div class="col-lg-3 col-lg-offset-1">
+                <div class="col-lg-12">
+                    <label class="form-label">Location</label>
+                    @Html.DropDownListFor(m => Model.VEMLOC, new SelectList(Model.LocationList, "value", "text", "0"), new { @class = "form-control input-sm" })
+                </div>
+                <div class="col-lg-12">
+                    @Html.LabelFor(model => Model.Region, "Region", new { @class = "form-label" })
+                    @Html.DropDownListFor(m => Model.Region, new SelectList(new List<Object>()), new { @class = "form-control input-sm", @Id = "region", @Value = Model.Region })
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="col-lg-12">
+                    @Html.LabelFor(model => Model.Province, "Province", new { @class = "form-label" })
+                    @Html.DropDownListFor(m => Model.Province, new SelectList(new List<Object>()), new { @class = "form-control input-sm", @Id = "province", @Value = Model.Province })
+                </div>
 
+                <div class="col-lg-12">
+                    @Html.LabelFor(model => Model.City, "City", new { @class = "form-label col-md-3" })
+                    @Html.DropDownListFor(m => Model.City, new SelectList(new List<Object>()), new { @class = "form-control input-sm", @Id = "city", @Value = Model.City })
+                </div>
+            </div>
+            <div class="col-lg-3 col-lg-offset-1">
+                <div class="form-group">
+                    <label class="form-label">Store list</label>
+                    @Html.DropDownListFor(m => Model.Store, new SelectList(Model.StoreList, "value", "text", "0"), new { @class = "form-control input-sm" })
+                </div>
+                <div class="form-group">
+                    <label class="form-label">
+                        @Html.CheckBoxFor(m => Model.SelectAllCb)
+                        Select all
+                    </label>
+                    <label class="form-label">
+                        @Html.CheckBoxFor(m => Model.SelectExceptCb)
+                        Select except
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="form-inline bottom float" style="right:50px">
+            <button type="submit" name="command" value="Save" class="btn btn-default">Save</button>
+            <button type="submit" name="command" value="Delete" class="btn btn-default">Delete</button>
         </div>
         <!--div class="container-fluid">
             <div class="col-lg-6">
                 <div class="col-lg-12">
                     <div class="form-group">
-                        Model.MenuItemMasterList[i]Html.LabelFor(m => m.VEMVEN, "Vendor number", new {  Model.MenuItemMasterList[i]class = "form-label" } )
-                        Model.MenuItemMasterList[i]Html.TextBoxFor(m => m.VEMVEN, new { Model.MenuItemMasterList[i]class = "form-control input-sm", Model.MenuItemMasterList[i]Value = Model.VEMADE, Model.MenuItemMasterList[i]type = "number", Model.MenuItemMasterList[i]maxlength = "3" })
+                        #Html.LabelFor(m => m.VEMVEN, "Vendor number", new {  #class = "form-label" } )
+                        #Html.TextBoxFor(m => m.VEMVEN, new { #class = "form-control input-sm", #Value = Model.VEMADE, #type = "number", #maxlength = "3" })
                     </div>
                     <div class="form-group">
-                        Model.MenuItemMasterList[i]Html.LabelFor(m => m.VEMDS1, "Vendor description", new { Model.MenuItemMasterList[i]class = "form-label" })
-                        Model.MenuItemMasterList[i]Html.TextBoxFor(m => m.VEMDS1, new { Model.MenuItemMasterList[i]class = "form-control input-sm", Model.MenuItemMasterList[i]Value = Model.VEMDS1, Model.MenuItemMasterList[i]maxlength = "20" })
+                        #Html.LabelFor(m => m.VEMDS1, "Vendor description", new { #class = "form-label" })
+                        #Html.TextBoxFor(m => m.VEMDS1, new { #class = "form-control input-sm", #Value = Model.VEMDS1, #maxlength = "20" })
                     </div>
                     <div class="row">
                         <div class="col-lg-6">
-                            Model.MenuItemMasterList[i]Html.LabelFor(m => m.VEMCCD, "Country code", new { Model.MenuItemMasterList[i]class = "form-label" })
-                            Model.MenuItemMasterList[i]Html.TextBoxFor(m => m.VEMCCD, new { Model.MenuItemMasterList[i]class = "form-control input-sm", Model.MenuItemMasterList[i]Value = Model.VEMCCD, Model.MenuItemMasterList[i]maxlength = "3" })
+                            #Html.LabelFor(m => m.VEMCCD, "Country code", new { #class = "form-label" })
+                            #Html.TextBoxFor(m => m.VEMCCD, new { #class = "form-control input-sm", #Value = Model.VEMCCD, #maxlength = "3" })
                         </div>
                         <div class="col-lg-6">
-                            Model.MenuItemMasterList[i]Html.LabelFor(m => m.VEMZIP, "ZIP code", new { Model.MenuItemMasterList[i]class = "form-label" })
-                            Model.MenuItemMasterList[i]Html.TextBoxFor(m => m.VEMZIP, new { Model.MenuItemMasterList[i]class = "form-control input-sm", Model.MenuItemMasterList[i]Value = Model.VEMZIP, Model.MenuItemMasterList[i]type = "number", Model.MenuItemMasterList[i]maxlength = "5" })
+                            #Html.LabelFor(m => m.VEMZIP, "ZIP code", new { #class = "form-label" })
+                            #Html.TextBoxFor(m => m.VEMZIP, new { #class = "form-control input-sm", #Value = Model.VEMZIP, #type = "number", #maxlength = "5" })
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-6">
-                            Model.MenuItemMasterList[i]Html.LabelFor(m => m.VEMCTY, "City", new { Model.MenuItemMasterList[i]class = "form-label" })
-                            Model.MenuItemMasterList[i]Html.TextBoxFor(m => m.VEMCTY, new { Model.MenuItemMasterList[i]class = "form-control input-sm", Model.MenuItemMasterList[i]Value = Model.VEMCTY, Model.MenuItemMasterList[i]maxlength = "20" })
+                            #Html.LabelFor(m => m.VEMCTY, "City", new { #class = "form-label" })
+                            #Html.TextBoxFor(m => m.VEMCTY, new { #class = "form-control input-sm", #Value = Model.VEMCTY, #maxlength = "20" })
                         </div>
                         <div class="col-lg-6">
-                            Model.MenuItemMasterList[i]Html.LabelFor(m => m.VEMSTR, "Street", new { Model.MenuItemMasterList[i]class = "form-label" })
-                            Model.MenuItemMasterList[i]Html.TextBoxFor(m => m.VEMSTR, new { Model.MenuItemMasterList[i]class = "form-control input-sm", Model.MenuItemMasterList[i]Value = Model.VEMSTR, Model.MenuItemMasterList[i]maxlength = "20" })
+                            #Html.LabelFor(m => m.VEMSTR, "Street", new { #class = "form-label" })
+                            #Html.TextBoxFor(m => m.VEMSTR, new { #class = "form-control input-sm", #Value = Model.VEMSTR, #maxlength = "20" })
                         </div>
                     </div>
                 </div>
@@ -88,65 +146,61 @@
                 <div class="col-lg-12">
                     <div class="row">
                         <div class="col-lg-6">
-                            Model.MenuItemMasterList[i]Html.LabelFor(m => m.VEMTEL, "Phone number", new { Model.MenuItemMasterList[i]class = "form-label" })
-                            Model.MenuItemMasterList[i]Html.TextBoxFor(m => m.VEMTEL, new { Model.MenuItemMasterList[i]class = "form-control input-sm", Model.MenuItemMasterList[i]Value = Model.VEMTEL, Model.MenuItemMasterList[i]maxlength = "18" })
+                            #Html.LabelFor(m => m.VEMTEL, "Phone number", new { #class = "form-label" })
+                            #Html.TextBoxFor(m => m.VEMTEL, new { #class = "form-control input-sm", #Value = Model.VEMTEL, #maxlength = "18" })
                         </div>
                         <div class="col-lg-6">
-                            Model.MenuItemMasterList[i]Html.LabelFor(m => m.VEMSTN, "Short number", new { Model.MenuItemMasterList[i]class = "form-label" })
-                            Model.MenuItemMasterList[i]Html.TextBoxFor(m => m.VEMSTN, new { Model.MenuItemMasterList[i]class = "form-control input-sm", Model.MenuItemMasterList[i]Value = Model.VEMSTN, Model.MenuItemMasterList[i]maxlength = "5" })
+                            #Html.LabelFor(m => m.VEMSTN, "Short number", new { #class = "form-label" })
+                            #Html.TextBoxFor(m => m.VEMSTN, new { #class = "form-control input-sm", #Value = Model.VEMSTN, #maxlength = "5" })
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
-                                Model.MenuItemMasterList[i]Html.LabelFor(m => m.VEMDAY, "Minimum stock buffer/Global reserve", new { Model.MenuItemMasterList[i]class = "form-label" })
-                                Model.MenuItemMasterList[i]Html.TextBoxFor(m => m.VEMDAY, new { Model.MenuItemMasterList[i]class = "form-control input-sm", Model.MenuItemMasterList[i]Value = Model.VEMDAY, Model.MenuItemMasterList[i]type = "number", Model.MenuItemMasterList[i]maxlength = "5" })
+                                #Html.LabelFor(m => m.VEMDAY, "Minimum stock buffer/Global reserve", new { #class = "form-label" })
+                                #Html.TextBoxFor(m => m.VEMDAY, new { #class = "form-control input-sm", #Value = Model.VEMDAY, #type = "number", #maxlength = "5" })
                             </div>
                             <div class="col-lg-6">
-                                Model.MenuItemMasterList[i]Html.LabelFor(m => m.VEMADE, "Auto-delivery", new { Model.MenuItemMasterList[i]class = "form-label" })
-                                Model.MenuItemMasterList[i]Html.TextBoxFor(m => m.VEMADE, new { Model.MenuItemMasterList[i]class = "form-control input-sm", Model.MenuItemMasterList[i]Value = Model.VEMADE, Model.MenuItemMasterList[i]maxlength = "1" })
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                Model.MenuItemMasterList[i]Html.LabelFor(m => m.VEMWSI, "WSI number", new { Model.MenuItemMasterList[i]class = "form-label" })
-                                Model.MenuItemMasterList[i]Html.TextBoxFor(m => m.VEMWSI, new { Model.MenuItemMasterList[i]class = "form-control input-sm", Model.MenuItemMasterList[i]Value = Model.VEMWSI, Model.MenuItemMasterList[i]type = "number", Model.MenuItemMasterList[i]maxlength = "5" })
-                            </div>
-                            <div class="col-lg-6">
-                                Model.MenuItemMasterList[i]Html.LabelFor(m => m.VEMTID, "COM. number ID", new { Model.MenuItemMasterList[i]class = "form-label" })
-                                Model.MenuItemMasterList[i]Html.TextBoxFor(m => m.VEMTID, new { Model.MenuItemMasterList[i]class = "form-control input-sm", Model.MenuItemMasterList[i]Value = Model.VEMTID, Model.MenuItemMasterList[i]maxlength = "5" }) 
+                                #Html.LabelFor(m => m.VEMADE, "Auto-delivery", new { #class = "form-label" })
+                                #Html.TextBoxFor(m => m.VEMADE, new { #class = "form-control input-sm", #Value = Model.VEMADE, #maxlength = "1" })
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
-                                Model.MenuItemMasterList[i]Html.LabelFor(m => m.VEMLOC, "Local vendor", new { Model.MenuItemMasterList[i]class = "form-label" })
-                                Model.MenuItemMasterList[i]Html.DropDownListFor(m => m.VEMLOC, new SelectList(
+                                #Html.LabelFor(m => m.VEMWSI, "WSI number", new { #class = "form-label" })
+                                #Html.TextBoxFor(m => m.VEMWSI, new { #class = "form-control input-sm", #Value = Model.VEMWSI, #type = "number", #maxlength = "5" })
+                            </div>
+                            <div class="col-lg-6">
+                                #Html.LabelFor(m => m.VEMTID, "COM. number ID", new { #class = "form-label" })
+                                #Html.TextBoxFor(m => m.VEMTID, new { #class = "form-control input-sm", #Value = Model.VEMTID, #maxlength = "5" }) 
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                #Html.LabelFor(m => m.VEMLOC, "Local vendor", new { #class = "form-label" })
+                                #Html.DropDownListFor(m => m.VEMLOC, new SelectList(
                                 new List<Object>{
                                     new { value = "0" , text = "0"  },
                                     new { value = "1" , text = "1" }
                                 }, "value", "text", "0"),
-                                new { Model.MenuItemMasterList[i]class = "form-control input-sm", Model.MenuItemMasterList[i]Value = Model.VEMLOC })
+                                new { #class = "form-control input-sm", #Value = Model.VEMLOC })
                             </div>
                             <div class="col-lg-6">
-                                Model.MenuItemMasterList[i]Html.LabelFor(m => m.VEMDEL, "Central vendor", new { Model.MenuItemMasterList[i]class = "form-label" })
-                                Model.MenuItemMasterList[i]Html.TextBoxFor(m => m.VEMDEL, new { Model.MenuItemMasterList[i]class = "form-control input-sm", Model.MenuItemMasterList[i]Value = Model.VEMDEL, Model.MenuItemMasterList[i]maxlength = "5" })
+                                #Html.LabelFor(m => m.VEMDEL, "Central vendor", new { #class = "form-label" })
+                                #Html.TextBoxFor(m => m.VEMDEL, new { #class = "form-control input-sm", #Value = Model.VEMDEL, #maxlength = "5" })
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
-                                Model.MenuItemMasterList[i]Html.LabelFor(m => m.VEMSTA, "Status", new { Model.MenuItemMasterList[i]class = "form-label" })
-                                Model.MenuItemMasterList[i]Html.DropDownListFor(m => m.VEMSTA, new SelectList(
+                                #Html.LabelFor(m => m.VEMSTA, "Status", new { #class = "form-label" })
+                                #Html.DropDownListFor(m => m.VEMSTA, new SelectList(
                                 new List<Object>{
                                     new { value = "0" , text = "Active"  },
                                     new { value = "1" , text = "Inactive" }
                                 }, "value", "text", "0"),
-                                 new { Model.MenuItemMasterList[i]class = "form-control input-sm", Model.MenuItemMasterList[i]Value = Model.VEMSTA })
+                                 new { #class = "form-control input-sm", #Value = Model.VEMSTA })
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="form-inline bottom float" style="right:50px">
-                <button type="submit" name="command" value="Save" class="btn btn-default">Save</button>
-                <button type="submit" name="command" value="Delete" class="btn btn-default">Delete</button>
             </div>
         </div-->
     }
@@ -191,4 +245,50 @@
             $("#search-result-modal").modal('show');
         }
     });
+</script>
+<script>
+ @{
+        string region = "NCR";
+        string province = "";
+        string city = "";
+        if (@Model.Region != null)
+        {
+            region = @Model.Region;
+        }
+        if (@Model.Province != null)
+        {
+            province = @Model.Province;
+        }
+        if (@Model.City != null)
+        {
+            city = @Model.City;
+        }
+    }
+    $(window).ready(function () {
+        // Modal
+		if (@HasSearch === 1) {
+			$("#search-result-modal").modal('show');
+		}
+        // Location Select
+	    $("option[value='@region'").attr("selected", "selected");
+	    updateProvince();
+	    $("option[value='@province'").attr("selected", "selected");
+	    updateCity();
+	    $("option[value='@city'").attr("selected", "selected");
+        // Store Attribute Select
+        $(".store-attrib").click(function(e) {
+            $(".store-attrib").not(this).each(function() {
+                $(this).attr("value", "0");
+                $(this).val("0");
+                $(".store-attrib option[value='0']").attr("selected", "selected");
+            });
+            $(".store-attrib").each(function() {
+                if ($(this).val() == "0") {
+                    $(this).css("background-color", "#eee");
+                } else {
+                    $(this).css("background-color", "white");
+                }
+            });
+        });
+	});
 </script>
